# harmonia

./: .gitignore  .gitleaks.toml  .kanon-ci.toml  .kanon-lint-ignore  .mailmap  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  deny.toml  flake.nix  llms.txt
akroasis/shared/akroasis-core/: Cargo.toml  PROTOTYPE_NOTES.md  README.md  build-android.sh
akroasis/shared/akroasis-core/src/: buffer.rs  config.rs  decoder.rs  engine.rs  jni.rs  lib.rs  queue.rs  replaygain.rs
akroasis/web/src-tauri/: Cargo.toml  tauri.conf.json
akroasis/web/src-tauri/src/: main.rs
crates/aitesis/: Cargo.toml
crates/aitesis/src/: approval.rs  error.rs  lib.rs  limits.rs  repo.rs  types.rs  workflow.rs
crates/akouo-core/: Cargo.toml
crates/akouo-core/src/: engine.rs  error.rs  lib.rs  queue.rs  ring_buffer.rs
crates/akouo-core/src/decode/: metadata.rs  mod.rs  opus.rs  probe.rs  symphonia.rs  wavpack.rs
crates/akouo-core/src/dsp/: compressor.rs  convolution.rs  crossfeed.rs  eq.rs  mod.rs  replaygain.rs  silence.rs  volume.rs
crates/akouo-core/src/gapless/: mod.rs  prebuffer.rs
crates/akouo-core/src/output/: cpal.rs  format.rs  mod.rs  resample.rs
crates/akouo-core/src/signal_path/: mod.rs
crates/epignosis/: Cargo.toml
crates/epignosis/src/: cache.rs  error.rs  identity.rs  lib.rs  rate_limit.rs  resolver.rs
crates/epignosis/src/providers/: acoustid.rs  audnexus.rs  comicvine.rs  googlebooks.rs  itunes.rs  mod.rs  musicbrainz.rs  openlibrary.rs  tmdb.rs  tvdb.rs
crates/ergasia/: Cargo.toml
crates/ergasia/src/: error.rs  lib.rs  progress.rs  session.rs  state.rs
crates/ergasia/src/extract/: detect.rs  mod.rs  pipeline.rs  rar.rs  seven_zip.rs  zip_extract.rs
crates/ergasia/src/seeding/: mod.rs  policy.rs
crates/exousia/: Cargo.toml
crates/exousia/src/: api_key.rs  error.rs  jwt.rs  lib.rs  middleware.rs  password.rs  service.rs  user.rs
crates/harmonia-convert/: Cargo.toml
crates/harmonia-convert/src/: calibre.rs  error.rs  kepubify.rs  lib.rs  pandoc.rs
crates/harmonia-db/: Cargo.toml
crates/harmonia-db/migrations/: 002_play_history.sql  005_requests.sql  007_subtitles.sql  008_renderers.sql  008_zones.sql
crates/harmonia-db/src/: lib.rs  pools.rs
crates/harmonia-db/src/repo/: audiobook.rs  book.rs  comic.rs  mod.rs  news.rs  play_history.rs  podcast.rs  registry.rs  renderer.rs  user.rs  want.rs  zone.rs
crates/harmonia-host/: Cargo.toml
crates/harmonia-host/src/: cli.rs  error.rs  main.rs  play.rs  serve.rs  shutdown.rs  startup.rs
crates/harmonia-host/src/render/: config.rs  credentials.rs  error.rs  mod.rs  pipeline.rs  playout.rs  protocol.rs  runner.rs  server.rs  status.rs  tls.rs
crates/harmonia-host/tests/: acquisition_integration.rs
crates/harmonia-host/tests/acquisition_integration/: pipeline_tests.rs  recovery_tests.rs
crates/horismos/: Cargo.toml
crates/horismos/src/: config.rs  diff.rs  error.rs  handle.rs  lib.rs  secrets.rs  subsystems.rs  validation.rs
crates/kathodos/: Cargo.toml
crates/kathodos/src/: alias.rs  error.rs  event.rs  lib.rs  sanitize.rs  sidecar.rs  template.rs
crates/kathodos/src/import/: conflict.rs  fileops.rs  identify.rs  mod.rs  template.rs
crates/kathodos/src/scanner/: filter.rs  mod.rs  walk.rs  watcher.rs
crates/komide/: Cargo.toml
crates/komide/src/: error.rs  fetch.rs  lib.rs  news.rs  parser.rs  podcast.rs  scheduler.rs  service.rs
crates/komide/src/service/: mod.rs  tests.rs
crates/kritike/: Cargo.toml
crates/kritike/src/: assessment.rs  error.rs  format_score.rs  health.rs  lib.rs  profile.rs  upgrade.rs
crates/paroche/: Cargo.toml
crates/paroche/assets/reader/: README.md
crates/paroche/src/: error.rs  lib.rs  middleware.rs  response.rs  state.rs  ws.rs
crates/paroche/src/discovery/: advertise.rs  mod.rs
crates/paroche/src/opds/: acquisition.rs  catalog.rs  mod.rs  search.rs  types_v1.rs  types_v2.rs
crates/paroche/src/routes/: audiobook.rs  book.rs  comic.rs  download.rs  indexer.rs  kosync.rs  library.rs  mod.rs  movie.rs  music.rs  news.rs  podcast.rs  read.rs  renderer.rs  request.rs  search.rs  stream.rs  subtitle.rs  system.rs  tv.rs  user.rs  wanted.rs  zone.rs
crates/paroche/src/subsonic/: auth.rs  browsing.rs  lists.rs  media.rs  mod.rs  playlists.rs  retrieval.rs  search.rs  system.rs  types.rs
crates/prostheke/: Cargo.toml
crates/prostheke/src/: download.rs  error.rs  events.rs  language.rs  lib.rs  repo.rs  search.rs  timing.rs  types.rs
crates/prostheke/src/providers/: addic7ed.rs  mod.rs  opensubtitles.rs
crates/syndesis/: Cargo.toml
crates/syndesis/src/: config.rs  error.rs  lib.rs
crates/syndesis/src/client/: buffer.rs  mod.rs  session.rs
crates/syndesis/src/clock/: coordinator.rs  estimator.rs  mod.rs  scheduler.rs
crates/syndesis/src/pairing/: handshake.rs  mod.rs
crates/syndesis/src/protocol/: codec.rs  frame.rs  mod.rs  session_frame.rs
crates/syndesis/src/server/: auth.rs  mod.rs  session.rs  source.rs  zone.rs
crates/syndesis/src/tls/: mod.rs
crates/syndesis/tests/: integration.rs
crates/syndesmos/: Cargo.toml
crates/syndesmos/src/: error.rs  events.rs  lib.rs  retry.rs
crates/syndesmos/src/lastfm/: artist.rs  auth.rs  mod.rs  scrobble.rs
crates/syndesmos/src/plex/: collections.rs  mod.rs  notify.rs  stats.rs
crates/syndesmos/src/tidal/: mod.rs  wantlist.rs
crates/syntaxis/: Cargo.toml
crates/syntaxis/src/: dispatch.rs  error.rs  lib.rs  pipeline.rs  queue.rs  recovery.rs  repo.rs  retry.rs  types.rs
crates/theatron/core/: Cargo.toml
crates/theatron/core/src/: lib.rs  types.rs
crates/theatron/desktop/: Cargo.toml  Dioxus.toml
crates/theatron/desktop/src/: app.rs  layout.rs  lib.rs  main.rs  state.rs  (+1 more)
crates/themelion/: Cargo.toml
crates/themelion/src/: error.rs  ids.rs  media.rs
crates/zetesis/: Cargo.toml
crates/zetesis/src/: error.rs  lib.rs  rate_limit.rs  repo.rs  search.rs  types.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: README.md
desktop/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
(+1241 files in other folders)
