[package]
name = "aitesis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Household media request management for Harmonia"

[dependencies]
themelion.workspace = true
horismos.workspace = true
apotheke.workspace = true
sqlx.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
uuid.workspace = true
jiff.workspace = true

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
