[package]
name = "epignosis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Metadata — enrichment and resolution"

[dependencies]
themelion.workspace = true
apotheke.workspace = true
horismos.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
dashmap = "6"
tokio-util = { version = "0.7", features = ["rt"] }

[dev-dependencies]
tokio = { workspace = true }
