[package]
name = "exousia"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Auth — JWT, API keys, user roles"

[dependencies]
themelion.workspace = true
horismos.workspace = true
apotheke.workspace = true
snafu.workspace = true
tracing.workspace = true
jsonwebtoken.workspace = true
argon2.workspace = true
rand.workspace = true
uuid.workspace = true
serde.workspace = true
serde_json.workspace = true
axum.workspace = true
sha2 = "0.11"
rand_core = { version = "0.6", features = ["getrandom"] }

[dev-dependencies]
tokio = { workspace = true }
sqlx = { workspace = true }
tower = { workspace = true }
http = "1"
