[package]
name = "harmonia-convert"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Ebook format conversion — subprocess wrappers for calibre, kepubify, and pandoc"

[dependencies]
tokio.workspace = true
snafu.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true }
