[package]
name = "harmonia-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary entry point — assembles all subsystems"

[[bin]]
name = "harmonia"
path = "src/main.rs"

[dependencies]
harmonia-common.workspace = true
horismos.workspace = true
harmonia-db.workspace = true
exousia.workspace = true
paroche.workspace = true
taxis.workspace = true
epignosis.workspace = true
kritike.workspace = true
komide.workspace = true
zetesis.workspace = true
ergasia.workspace = true
syntaxis.workspace = true
aitesis.workspace = true
syndesmos.workspace = true
prostheke.workspace = true
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
axum.workspace = true
reqwest.workspace = true
sqlx.workspace = true
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true

[dev-dependencies]
rstest.workspace = true
