[package]
name = "harmonia-host"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Binary entry point — assembles all subsystems"

[[bin]]
name = "harmonia"
path = "src/main.rs"

[features]
# WHY: systemd watchdog/notify is Linux-only; keep disabled in CI and on macOS dev machines.
systemd = ["dep:sd-notify"]

[dependencies]
harmonia-common.workspace = true
horismos.workspace = true
harmonia-db.workspace = true
exousia.workspace = true
paroche.workspace = true
taxis.workspace = true
epignosis.workspace = true
kritike.workspace = true
komide.workspace = true
zetesis.workspace = true
ergasia.workspace = true
syntaxis.workspace = true
aitesis.workspace = true
syndesmos.workspace = true
syndesis.workspace = true
prostheke.workspace = true
akouo-core = { workspace = true, features = ["native-output"] }
clap.workspace = true
tokio.workspace = true
tokio-util.workspace = true
quinn.workspace = true
rustls.workspace = true
rcgen.workspace = true
figment.workspace = true
serde.workspace = true
axum.workspace = true
reqwest.workspace = true
sqlx.workspace = true
serde_json.workspace = true
snafu.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rand.workspace = true
mdns-sd.workspace = true
toml.workspace = true
jiff.workspace = true
# WHY: sd-notify cannot be a workspace dep — workspace deps cannot be optional.
sd-notify = { version = "0.4", optional = true }

[dev-dependencies]
rstest.workspace = true
tower.workspace = true
uuid.workspace = true
tempfile = "3"
