[package]
name = "horismos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Configuration loading and validation for Harmonia"

[dependencies]
harmonia-common.workspace = true
figment = { workspace = true, features = ["toml", "env"] }
serde.workspace = true
serde_json.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true

[dev-dependencies]
rstest.workspace = true
tempfile = "3"
figment = { workspace = true, features = ["toml", "env", "test"] }
tokio = { workspace = true, features = ["macros", "rt"] }
