[package]
name = "kathodos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Import and organize — file pipeline and library management"

[dependencies]
themelion.workspace = true
apotheke.workspace = true
horismos.workspace = true
serde = { workspace = true }
snafu.workspace = true
toml.workspace = true
tracing.workspace = true
tokio = { workspace = true }
walkdir.workspace = true
notify.workspace = true
lofty.workspace = true
unicode-normalization.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
rstest.workspace = true
tempfile = "3"
