[package]
name = "kritike"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Curation — quality assessment and health reporting"

[dependencies]
themelion.workspace = true
apotheke.workspace = true
horismos.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
serde.workspace = true
sqlx.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
rstest.workspace = true
uuid.workspace = true
