[package]
name = "syndesis"
description = "QUIC transport, TLS pairing, renderer authentication"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
themelion.workspace = true
apotheke.workspace = true
argon2.workspace = true
base64.workspace = true
bytes.workspace = true
jiff.workspace = true
quinn.workspace = true
rand.workspace = true
rand_core.workspace = true
rcgen.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
snafu.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["full", "test-util"] }
sqlx.workspace = true
apotheke = { workspace = true }
