[package]
name = "syndesmos"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "External API integration for Harmonia — Plex, Last.fm, Tidal"

[dependencies]
themelion.workspace = true
horismos.workspace = true
apotheke.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
tokio-util.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
jiff.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "test-util"] }
