[package]
name = "themelion"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared types, newtypes, and event definitions for Harmonia"

[dependencies]
serde.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["sync"] }
tracing.workspace = true
uuid = { workspace = true }
jiff = { workspace = true }
compact_str = { workspace = true }

[dev-dependencies]
rstest.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["rt", "macros"] }
