[package]
name = "zetesis"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Indexer protocol and search routing for Harmonia"

[dependencies]
harmonia-common.workspace = true
horismos.workspace = true
harmonia-db.workspace = true
snafu.workspace = true
tracing.workspace = true
tokio.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
quick-xml.workspace = true
dashmap.workspace = true
tokio-util.workspace = true
futures.workspace = true
bytes.workspace = true
uuid.workspace = true
jiff.workspace = true
sqlx.workspace = true

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
