[package]
name = "akroasis-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "High-fidelity audio engine — decode, DSP, and output"
repository = "https://github.com/forkwright/harmonia"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Audio decode
symphonia = { version = "0.5", features = [
    "flac", "wav", "mp3", "aac", "isomp4", "vorbis", "alac", "aiff", "ogg",
    "opt-simd-sse", "opt-simd-neon",
] }
opus = "0.3"
lofty = "0.22"

# Audio output — requires ALSA on Linux; enable via "native-output" feature
cpal = { version = "0.17", optional = true }

# Audio processing
rubato = "1.0"
ebur128 = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt", "sync", "time", "macros"] }

# Error handling
snafu = "0.8"

# Logging
tracing = "0.1"

# Random (TPDF dither)
rand = "0.9"

[dev-dependencies]
rstest = "0.25"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[features]
# UniFFI bindings for Android — Phase 6
android = []
# Native audio output via cpal (requires ALSA on Linux)
native-output = ["cpal"]
