[package]
name = "akroasis-core"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0"
description = "High-fidelity audio engine — decode, DSP, and output"
repository = "https://github.com/forkwright/harmonia"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
# Audio decode
symphonia = { version = "0.5", features = [
    "flac", "wav", "mp3", "aac", "isomp4", "vorbis", "alac", "aiff", "ogg",
    "opt-simd-sse", "opt-simd-neon",
] }
opus = "0.3"
lofty = "0.22"

# Audio output — requires ALSA on Linux; enable via "native-output" feature
cpal = { version = "0.17", optional = true }

# Audio processing
rubato = "1.0"
ebur128 = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros"] }

# Error handling
snafu = "0.8"

# Logging
tracing = "0.1"

# Random (TPDF dither)
rand = "0.9"

# CLI
clap = { version = "4", features = ["derive"], optional = true }
crossterm = { version = "0.28", features = ["event-stream"], optional = true }
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
futures = { version = "0.3", optional = true }

[dev-dependencies]
rstest = "0.25"
tempfile = "3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "test-util"] }

[[bin]]
name = "harmonia"
path = "src/bin/harmonia/main.rs"
required-features = ["cli"]

[features]
# UniFFI bindings for Android — Phase 6
android = []
# Native audio output via cpal (requires ALSA on Linux)
native-output = ["cpal"]
# CLI binary — harmonia play
cli = ["native-output", "clap", "crossterm", "serde", "serde_json", "tracing-subscriber", "futures"]
