[package]
name = "akroasis"
version = "0.1.0"
description = "Unified media player with bit-perfect audio"
authors = ["Akroasis Contributors"]
edition = "2021"
license = "GPL-3.0"

[build-dependencies]
tauri-build = { version = "2.3", features = [] }

[dependencies]
tauri = { version = "2.3", features = ["protocol-asset", "tray-icon"] }
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# akroasis-core = { path = "../../shared/akroasis-core" }
# Phase 1 (Tauri shell) does not require the Rust audio core.
# Re-enable when native PipeWire/ALSA integration is implemented (Phase 2).

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
