[package]
name = "theatron-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared API client and types for Harmonia desktop and TUI frontends"
publish = false

[dependencies]
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
snafu = { workspace = true }
tracing = { workspace = true }
