[package]
name = "theatron-desktop"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Dioxus desktop UI for the Harmonia media platform"
publish = false

[dependencies]
theatron-core = { path = "../core" }

# UI framework
dioxus = { version = "0.7", features = ["desktop", "router"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Error handling
snafu = { version = "0.8", features = ["rust_1_65"] }

# Config persistence
dirs = "6"
toml = "1.0"

# theatron-desktop uses inline lints because Cargo does not allow combining
# workspace lint inheritance with package-level overrides.
[lints.rust]
future_incompatible = { level = "warn", priority = -1 }
nonstandard_style = { level = "warn", priority = -1 }
unsafe_code = "deny"

[lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
exit = "deny"
await_holding_lock = "deny"
explicit_into_iter_loop = "warn"
fallible_impl_from = "warn"
fn_params_excessive_bools = "warn"
implicit_clone = "warn"
map_err_ignore = "warn"
match_wildcard_for_single_variants = "warn"
needless_for_each = "warn"
rc_mutex = "warn"
string_add = "warn"
trait_duplication_in_bounds = "warn"
unused_self = "warn"
disallowed_methods = "deny"
disallowed_types = "deny"
